# image-preparer

./: .gitignore  Cargo.toml  README.md
cli/: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md
cli/src/: cli.rs  config.rs  converter.rs  error.rs  io.rs  lib.rs  main.rs  report.rs
cli/src/processor/: mod.rs  mp4.rs  png.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  format.rs  lib.rs  pipeline.rs
core/src/processor/: jpg.rs  mod.rs  mp3.rs  png.rs  wav.rs  webp.rs
server/: Cargo.toml  README.md
server/src/: handlers.rs  main.rs
