[workspace]
members = [
    "core",
    "cli",
    "server",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["pavelagejkin"]

[workspace.dependencies]
# Shared dependencies
image = "0.25"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
