[package]
name = "image_preparer"
version = "0.1.0"
edition = "2021"
description = "CLI tool for PNG/WebP compression, MP4 optimization, and metadata stripping for images, audio, and video files"
license = "GPL-3.0-or-later"

[lib]
name = "image_preparer"
path = "src/lib.rs"

[[bin]]
name = "image_preparer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
imagequant = "4"
lodepng = "3"
oxipng = "10"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
indicatif = "0.17"
rayon = "1"
id3 = "1.14"
webp = "0.3"
mp4 = "0.14"
