[package]
name = "image_preparer"
version = "0.1.0"
edition = "2021"
description = "CLI tool for PNG/WebP compression, MP4 optimization, and metadata stripping for images, audio, and video files"
license = "GPL-3.0-or-later"

[lib]
name = "image_preparer"
path = "src/lib.rs"

[[bin]]
name = "image_preparer"
path = "src/main.rs"

[dependencies]
image_preparer_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
indicatif = "0.17"
rayon = "1"
