[package]
name = "image_preparer_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core processing logic for image/video compression, conversion, and metadata stripping"

[lib]
name = "image_preparer_core"
path = "src/lib.rs"

[dependencies]
image = "0.25"
imagequant = "4"
lodepng = "3"
oxipng = "10"
anyhow.workspace = true
thiserror = "2"
log = "0.4"
id3 = "1.14"
webp = "0.3"
mp4 = "0.14"
