[package]
name = "image_preparer_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Image processing (reuse from workspace)
image.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

# HTTP
hyper = "1"
bytes = "1"
mime = "0.3"

# File handling
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

# CLI library (shared logic)
image_preparer = { path = "../cli" }
