[package]
name = "image_preparer_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Core processing logic
image_preparer_core = { path = "../core" }

# Error handling & logging
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

# HTTP
hyper = "1"
bytes = "1"
mime = "0.3"

# File handling
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
